<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:text="@string/pmm"
            android:textColor="@color/red"
            android:textSize="100px"
            android:gravity="center"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/acerca"
            android:textSize="80px"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/galVideos"
            android:textSize="80px"
            android:textColor="@color/black"
            android:backgroundTint="@color/greenLight"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/videos"
            android:textSize="80px"
            android:textColor="@color/black"
            android:backgroundTint="@color/redLight"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/volver"
            android:textSize="80px"
            android:textColor="@color/black"
            android:backgroundTint="@color/blueLight"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>