<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       tools:ignore="MissingConstraints"
       android:id="@+id/layoutArriba"
       >

      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/green"
          android:text="@string/texto1"
          app:layout_constraintStart_toStartOf="parent"

          tools:ignore="MissingConstraints" />

      <TextView
          android:id="@+id/text2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/green"
          android:text="@string/texto2"
          app:layout_constraintEnd_toStartOf="@id/text3"
          app:layout_constraintStart_toEndOf="@id/text1"
          tools:ignore="MissingConstraints"/>

      <TextView
          android:id="@+id/text3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/green"
          android:text="@string/texto3"
          tools:ignore="MissingConstraints"
          app:layout_constraintEnd_toEndOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>

   <TextView
       android:id="@+id/text4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/green"
       android:text="@string/texto4"
       app:layout_constraintTop_toBottomOf="@id/layoutArriba"
       app:layout_constraintBottom_toTopOf="@id/layoutAbajo"

       tools:ignore="MissingConstraints" />

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       tools:ignore="MissingConstraints"
       app:layout_constraintBottom_toBottomOf="parent"
       android:id="@+id/layoutAbajo"
       >

      <TextView
          android:id="@+id/text5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/green"
          android:text="@string/texto5"
          app:layout_constraintStart_toStartOf="parent"

          tools:ignore="MissingConstraints" />

      <TextView
          android:id="@+id/text6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/green"
          android:text="@string/texto6"
          app:layout_constraintEnd_toEndOf="parent"
          tools:ignore="MissingConstraints"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>